--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -211,14 +211,7 @@
    ],
    "source": [
     "K5 = nx.complete_graph(5)\n",
-    "P4 = nx.Graph([(\"a\", \"b\"), (\"b\", \"c\"), (\"c\", \"d\")])\n",
-    "G = nx.union(K5, P4)\n",
-    "nx.draw(G, with_labels=True)\n",
-    "root_graphs = []\n",
-    "for comp in nx.connected_components(G):\n",
-    "    root_graphs.append(nx.inverse_line_graph(G.subgraph(comp)))\n",
-    "\n",
-    "nx.draw(root_graphs[1], with_labels=True)"
+    "P4 = nx.Graph([(\"a\", \"b\"), (\"b\", \"c\"), (\"c\", \"d\")])"
    ]
   },
   {
