--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -194,6 +194,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 81,
+   "id": "964f8f15",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'4R79.2'"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(graph.nodes())[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 66,
    "metadata": {},
    "outputs": [
@@ -214,9 +235,6 @@
    ],
    "source": [
     "n = 30\n",
-    "root_graphs = []\n",
-    "for comp in nx.connected_components(graph):\n",
-    "    root_graphs.append(nx.inverse_line_graph(graph.subgraph(comp)))\n",
     "\n",
     "nx.draw(root_graphs[0])"
    ]
