--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -204,6 +204,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 84,
+   "id": "a5ba0c77",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graph.nodes.get(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 66,
    "metadata": {},
    "outputs": [
