--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 85,
    "id": "4a197da6",
    "metadata": {},
    "outputs": [
@@ -180,8 +180,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of nodes: 27\n",
-      "Number of edges: 21\n"
+      "Graph with 27 nodes and 21 edges\n"
      ]
     }
    ],
@@ -189,7 +188,8 @@
     "# graph = nx.read_edgelist(join(data_dir, \"DM-HT.txt\"), nodetype=str, data=((\"weight\", float),))\n",
     "graph = nx.read_edgelist(join(data_dir, \"DM-HT_small.txt\"), nodetype=str, data=((\"weight\", float),))\n",
     "di_graph = undirected_to_directed(graph)\n",
-    "print(f\"Number of nodes: {graph.number_of_nodes()}\\nNumber of edges: {graph.number_of_edges()}\")"
+    "print(f\"{graph}\")\n",
+    "# print(f\"Number of nodes: {graph.number_of_nodes()}\\nNumber of edges: {graph.number_of_edges()}\")"
    ]
   },
   {
