--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -193,11 +193,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 106,
    "id": "964f8f15",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/mm/5vsgc5194kqf1xnmgq439jww0000gn/T/ipykernel_64452/928109144.py:1: DeprecationWarning: info is deprecated and will be removed in version 3.0.\n",
+      "\n",
+      "  nx.info(di_graph)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'DiGraph with 27 nodes and 21 edges'"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nx.info(di_graph)"
+   ]
   },
   {
    "cell_type": "code",
