--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -193,32 +193,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 108,
    "id": "964f8f15",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/mm/5vsgc5194kqf1xnmgq439jww0000gn/T/ipykernel_64452/928109144.py:1: DeprecationWarning: info is deprecated and will be removed in version 3.0.\n",
-      "\n",
-      "  nx.info(di_graph)\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "'DiGraph with 27 nodes and 21 edges'"
+       "KeysView(AdjacencyView({'4R79.2': {'F33A8.4': {'weight': 2.0535098696773}, 'K08E4.1': {'weight': 1.71816616036671}, 'Y37E3.9': {'weight': 2.0535098696773}, 'Y59A8B.1': {'weight': 2.03824718864659}}, 'F33A8.4': {'4R79.2': {'weight': 2.0535098696773}}, 'K08E4.1': {'4R79.2': {'weight': 1.71816616036671}}, 'Y37E3.9': {'4R79.2': {'weight': 2.0535098696773}}, 'Y59A8B.1': {'4R79.2': {'weight': 2.03824718864659}}, 'AC3.2': {'C55A6.10': {'weight': 1.45314520221391}}, 'C55A6.10': {'AC3.2': {'weight': 1.45314520221391}}, 'AC3.7': {'C36B7.6': {'weight': 1.72056305302742}, 'F55F8.5': {'weight': 3.64469409198139}, 'R166.2': {'weight': 3.6241172604793}}, 'C36B7.6': {'AC3.7': {'weight': 1.72056305302742}, 'AC3.8': {'weight': 2.95263550099055}}, 'F55F8.5': {'AC3.7': {'weight': 3.64469409198139}, 'AC3.8': {'weight': 3.64590831935301}}, 'R166.2': {'AC3.7': {'weight': 3.6241172604793}, 'AC3.8': {'weight': 3.64445039181658}}, 'AC3.8': {'C36B7.6': {'weight': 2.95263550099055}, 'F55F8.5': {'weight': 3.64590831935301}, 'R166.2': {'weight': 3.64445039181658}}, 'AC7.2': {'F59F5.6': {'weight': 3.64468858728094}}, 'F59F5.6': {'AC7.2': {'weight': 3.64468858728094}}, 'B0024.11': {'K01G5.2': {'weight': 3.55606621702145}, 'K08H2.6': {'weight': 1.43660879909885}, 'Y74C9A.3': {'weight': 3.63608132771812}}, 'K01G5.2': {'B0024.11': {'weight': 3.55606621702145}}, 'K08H2.6': {'B0024.11': {'weight': 1.43660879909885}}, 'Y74C9A.3': {'B0024.11': {'weight': 3.63608132771812}}, 'B0024.13': {'M142.1': {'weight': 3.64570842015523}}, 'M142.1': {'B0024.13': {'weight': 3.64570842015523}}, 'B0024.14': {'D2021.2': {'weight': 3.64525358859675}, 'T16H12.5': {'weight': 3.60664547660917}}, 'D2021.2': {'B0024.14': {'weight': 3.64525358859675}}, 'T16H12.5': {'B0024.14': {'weight': 3.60664547660917}}, 'B0024.9': {'T27A10.3': {'weight': 1.77231656350807}, 'T27E9.3': {'weight': 1.43096830763267}, 'ZK370.2': {'weight': 1.43175498459377}}, 'T27A10.3': {'B0024.9': {'weight': 1.77231656350807}}, 'T27E9.3': {'B0024.9': {'weight': 1.43096830763267}}, 'ZK370.2': {'B0024.9': {'weight': 1.43175498459377}}}))"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "for x in graph.subgraph"
+    "graph.adj.keys()"
    ]
   },
   {
