--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -193,23 +193,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 111,
    "id": "964f8f15",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "KeysView(AdjacencyView({'4R79.2': {'F33A8.4': {'weight': 2.0535098696773}, 'K08E4.1': {'weight': 1.71816616036671}, 'Y37E3.9': {'weight': 2.0535098696773}, 'Y59A8B.1': {'weight': 2.03824718864659}}, 'F33A8.4': {'4R79.2': {'weight': 2.0535098696773}}, 'K08E4.1': {'4R79.2': {'weight': 1.71816616036671}}, 'Y37E3.9': {'4R79.2': {'weight': 2.0535098696773}}, 'Y59A8B.1': {'4R79.2': {'weight': 2.03824718864659}}, 'AC3.2': {'C55A6.10': {'weight': 1.45314520221391}}, 'C55A6.10': {'AC3.2': {'weight': 1.45314520221391}}, 'AC3.7': {'C36B7.6': {'weight': 1.72056305302742}, 'F55F8.5': {'weight': 3.64469409198139}, 'R166.2': {'weight': 3.6241172604793}}, 'C36B7.6': {'AC3.7': {'weight': 1.72056305302742}, 'AC3.8': {'weight': 2.95263550099055}}, 'F55F8.5': {'AC3.7': {'weight': 3.64469409198139}, 'AC3.8': {'weight': 3.64590831935301}}, 'R166.2': {'AC3.7': {'weight': 3.6241172604793}, 'AC3.8': {'weight': 3.64445039181658}}, 'AC3.8': {'C36B7.6': {'weight': 2.95263550099055}, 'F55F8.5': {'weight': 3.64590831935301}, 'R166.2': {'weight': 3.64445039181658}}, 'AC7.2': {'F59F5.6': {'weight': 3.64468858728094}}, 'F59F5.6': {'AC7.2': {'weight': 3.64468858728094}}, 'B0024.11': {'K01G5.2': {'weight': 3.55606621702145}, 'K08H2.6': {'weight': 1.43660879909885}, 'Y74C9A.3': {'weight': 3.63608132771812}}, 'K01G5.2': {'B0024.11': {'weight': 3.55606621702145}}, 'K08H2.6': {'B0024.11': {'weight': 1.43660879909885}}, 'Y74C9A.3': {'B0024.11': {'weight': 3.63608132771812}}, 'B0024.13': {'M142.1': {'weight': 3.64570842015523}}, 'M142.1': {'B0024.13': {'weight': 3.64570842015523}}, 'B0024.14': {'D2021.2': {'weight': 3.64525358859675}, 'T16H12.5': {'weight': 3.60664547660917}}, 'D2021.2': {'B0024.14': {'weight': 3.64525358859675}}, 'T16H12.5': {'B0024.14': {'weight': 3.60664547660917}}, 'B0024.9': {'T27A10.3': {'weight': 1.77231656350807}, 'T27E9.3': {'weight': 1.43096830763267}, 'ZK370.2': {'weight': 1.43175498459377}}, 'T27A10.3': {'B0024.9': {'weight': 1.77231656350807}}, 'T27E9.3': {'B0024.9': {'weight': 1.43096830763267}}, 'ZK370.2': {'B0024.9': {'weight': 1.43175498459377}}}))"
-      ]
-     },
-     "execution_count": 108,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4R79.2: {'F33A8.4': {'weight': 2.0535098696773}, 'K08E4.1': {'weight': 1.71816616036671}, 'Y37E3.9': {'weight': 2.0535098696773}, 'Y59A8B.1': {'weight': 2.03824718864659}}\n",
+      "F33A8.4: {'4R79.2': {'weight': 2.0535098696773}}\n",
+      "K08E4.1: {'4R79.2': {'weight': 1.71816616036671}}\n",
+      "Y37E3.9: {'4R79.2': {'weight': 2.0535098696773}}\n",
+      "Y59A8B.1: {'4R79.2': {'weight': 2.03824718864659}}\n",
+      "AC3.2: {'C55A6.10': {'weight': 1.45314520221391}}\n",
+      "C55A6.10: {'AC3.2': {'weight': 1.45314520221391}}\n",
+      "AC3.7: {'C36B7.6': {'weight': 1.72056305302742}, 'F55F8.5': {'weight': 3.64469409198139}, 'R166.2': {'weight': 3.6241172604793}}\n",
+      "C36B7.6: {'AC3.7': {'weight': 1.72056305302742}, 'AC3.8': {'weight': 2.95263550099055}}\n",
+      "F55F8.5: {'AC3.7': {'weight': 3.64469409198139}, 'AC3.8': {'weight': 3.64590831935301}}\n",
+      "R166.2: {'AC3.7': {'weight': 3.6241172604793}, 'AC3.8': {'weight': 3.64445039181658}}\n",
+      "AC3.8: {'C36B7.6': {'weight': 2.95263550099055}, 'F55F8.5': {'weight': 3.64590831935301}, 'R166.2': {'weight': 3.64445039181658}}\n",
+      "AC7.2: {'F59F5.6': {'weight': 3.64468858728094}}\n",
+      "F59F5.6: {'AC7.2': {'weight': 3.64468858728094}}\n",
+      "B0024.11: {'K01G5.2': {'weight': 3.55606621702145}, 'K08H2.6': {'weight': 1.43660879909885}, 'Y74C9A.3': {'weight': 3.63608132771812}}\n",
+      "K01G5.2: {'B0024.11': {'weight': 3.55606621702145}}\n",
+      "K08H2.6: {'B0024.11': {'weight': 1.43660879909885}}\n",
+      "Y74C9A.3: {'B0024.11': {'weight': 3.63608132771812}}\n",
+      "B0024.13: {'M142.1': {'weight': 3.64570842015523}}\n",
+      "M142.1: {'B0024.13': {'weight': 3.64570842015523}}\n",
+      "B0024.14: {'D2021.2': {'weight': 3.64525358859675}, 'T16H12.5': {'weight': 3.60664547660917}}\n",
+      "D2021.2: {'B0024.14': {'weight': 3.64525358859675}}\n",
+      "T16H12.5: {'B0024.14': {'weight': 3.60664547660917}}\n",
+      "B0024.9: {'T27A10.3': {'weight': 1.77231656350807}, 'T27E9.3': {'weight': 1.43096830763267}, 'ZK370.2': {'weight': 1.43175498459377}}\n",
+      "T27A10.3: {'B0024.9': {'weight': 1.77231656350807}}\n",
+      "T27E9.3: {'B0024.9': {'weight': 1.43096830763267}}\n",
+      "ZK370.2: {'B0024.9': {'weight': 1.43175498459377}}\n"
+     ]
     }
    ],
    "source": [
-    "graph.adj.keys()"
+    "for n, v in graph.adjacency():\n",
+    "    print(f\"{n}: {v}\")"
    ]
   },
   {
