--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -203,6 +203,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 121,
+   "id": "40bae192",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'4R79.2', 'F33A8.4', 'K08E4.1', 'Y37E3.9', 'Y59A8B.1'},\n",
+       " {'AC3.7', 'AC3.8', 'C36B7.6', 'F55F8.5', 'R166.2'},\n",
+       " {'B0024.11', 'K01G5.2', 'K08H2.6', 'Y74C9A.3'},\n",
+       " {'B0024.9', 'T27A10.3', 'T27E9.3', 'ZK370.2'},\n",
+       " {'B0024.14', 'D2021.2', 'T16H12.5'},\n",
+       " {'AC3.2', 'C55A6.10'},\n",
+       " {'AC7.2', 'F59F5.6'},\n",
+       " {'B0024.13', 'M142.1'}]"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted(nx.connected_components(graph), key=len, reverse=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 118,
    "id": "da66b384",
    "metadata": {},
