--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 124,
    "id": "4a197da6",
    "metadata": {},
    "outputs": [
@@ -180,25 +180,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Graph with 27 nodes and 21 edges\n"
+      "Graph with 2989 nodes and 4660 edges\n"
      ]
     }
    ],
    "source": [
-    "# graph = nx.read_edgelist(join(data_dir, \"DM-HT.txt\"), nodetype=str, data=((\"weight\", float),))\n",
-    "graph = nx.read_edgelist(join(data_dir, \"DM-HT_small.txt\"), nodetype=str, data=((\"weight\", float),))\n",
+    "graph = nx.read_edgelist(join(data_dir, \"DM-HT.txt\"), nodetype=str, data=((\"weight\", float),))\n",
+    "# graph = nx.read_edgelist(join(data_dir, \"DM-HT_small.txt\"), nodetype=str, data=((\"weight\", float),))\n",
     "di_graph = undirected_to_directed(graph)\n",
     "print(f\"{graph}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 127,
    "id": "d8e72801",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2831"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "largest_cc = max(nx.connected_components(graph), key=len)"
+    "largest_cc = max(nx.connected_components(graph), key=len)\n",
+    "len(largest_cc)"
    ]
   },
   {
