Work in progress

--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -204,6 +204,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "d77c25e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sample_graph(graph: nx.Graph, sample_size: int) -> nx.Graph:\n",
+    "    \"\"\"\n",
+    "    Returns a sample graph of the given size\n",
+    "    \"\"\"\n",
+    "    return nx.subgraph(graph, largest_cc[:sample_size])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 137,
    "id": "40bae192",
    "metadata": {},
