--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -193,13 +193,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 138,
    "id": "d8e72801",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2831"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "largest_cc = max(nx.connected_components(graph), key=len)\n",
-    "# largest_cc"
+    "len(largest_cc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "id": "836b87ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'C39F7.4',\n",
+       " 'E02C12.6',\n",
+       " 'F30H5.1',\n",
+       " 'F32D8.14',\n",
+       " 'F59A6.1',\n",
+       " 'H13N06.5',\n",
+       " 'W02B12.10',\n",
+       " 'W05G11.6',\n",
+       " 'Y46G5A.31',\n",
+       " 'ZC443.6'}"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set(list(largest_cc)[:10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "id": "c8744c2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'set' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [139], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m nx\u001b[38;5;241m.\u001b[39msubgraph(graph, largest_cc[:\u001b[38;5;241m25\u001b[39m])\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'set' object is not subscriptable"
+     ]
+    }
+   ],
+   "source": [
+    "nx.subgraph(graph, largest_cc[:25])"
    ]
   },
   {
@@ -213,6 +276,7 @@
     "    \"\"\"\n",
     "    Returns a sample graph of the given size\n",
     "    \"\"\"\n",
+    "    \n",
     "    return nx.subgraph(graph, largest_cc[:sample_size])"
    ]
   },
