Work in progress

--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -239,30 +239,28 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "set(list(largest_cc)[:10])"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 144,
    "id": "c8744c2a",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'set' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [139], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m nx\u001b[38;5;241m.\u001b[39msubgraph(graph, largest_cc[:\u001b[38;5;241m25\u001b[39m])\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'set' object is not subscriptable"
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "nx.subgraph(graph, largest_cc[:25])"
+    "# nx.is_connected(nx.subgraph(graph, set(list(largest_cc)[:25])))\n",
+    "nx.is_connected(nx.subgraph(graph, largest_cc))"
    ]
   },
   {
