Work in progress

--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -215,45 +215,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 146,
    "id": "836b87ab",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'C39F7.4',\n",
-       " 'E02C12.6',\n",
-       " 'F30H5.1',\n",
-       " 'F32D8.14',\n",
-       " 'F59A6.1',\n",
-       " 'H13N06.5',\n",
-       " 'W02B12.10',\n",
-       " 'W05G11.6',\n",
-       " 'Y46G5A.31',\n",
-       " 'ZC443.6'}"
-      ]
-     },
-     "execution_count": 142,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/mm/5vsgc5194kqf1xnmgq439jww0000gn/T/ipykernel_64452/1034422684.py:2: DeprecationWarning: Sampling from a set deprecated\n",
+      "since Python 3.9 and will be removed in a subsequent version.\n",
+      "  largest_cc = set(random.sample(largest_cc, 5))\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "import random\n",
+    "largest_cc = set(random.sample(largest_cc, 5))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 147,
    "id": "c8744c2a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
