--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 148,
    "id": "d8e72801",
    "metadata": {},
    "outputs": [
@@ -203,7 +203,7 @@
        "2831"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,28 +215,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 151,
    "id": "836b87ab",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/mm/5vsgc5194kqf1xnmgq439jww0000gn/T/ipykernel_64452/1034422684.py:2: DeprecationWarning: Sampling from a set deprecated\n",
-      "since Python 3.9 and will be removed in a subsequent version.\n",
-      "  largest_cc = set(random.sample(largest_cc, 5))\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{'F59A6.1', 'H13N06.5', 'W02B12.10', 'W05G11.6', 'Y46G5A.31'}"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import random\n",
-    "largest_cc = set(random.sample(largest_cc, 5))"
+    "import itertools\n",
+    "largest_cc = set(itertools.islice(largest_cc, 5))\n",
+    "largest_cc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 150,
    "id": "c8744c2a",
    "metadata": {},
    "outputs": [
@@ -246,7 +248,7 @@
        "False"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
