--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 153,
    "id": "d8e72801",
    "metadata": {},
    "outputs": [
@@ -203,7 +203,7 @@
        "2831"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,14 +231,14 @@
     }
    ],
    "source": [
-    "import itertools\n",
-    "largest_cc = set(itertools.islice(largest_cc, 5))\n",
-    "largest_cc"
+    "# import itertools\n",
+    "# largest_cc = set(itertools.islice(largest_cc, 5))\n",
+    "# largest_cc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 154,
    "id": "c8744c2a",
    "metadata": {},
    "outputs": [
@@ -248,14 +248,14 @@
        "False"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# nx.is_connected(nx.subgraph(graph, set(list(largest_cc)[:25])))\n",
-    "nx.is_connected(nx.subgraph(graph, largest_cc))"
+    "nx.is_connected(nx.subgraph(graph, list(largest_cc)[:25]))\n",
+    "# nx.is_connected(nx.subgraph(graph, largest_cc))"
    ]
   },
   {
