Work in progress

--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 155,
    "id": "d8e72801",
    "metadata": {},
    "outputs": [
@@ -203,7 +203,7 @@
        "2831"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,24 +238,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 156,
    "id": "c8744c2a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nx.is_connected(nx.subgraph(graph, list(largest_cc)[:25]))\n",
-    "# nx.is_connected(nx.subgraph(graph, largest_cc))"
+    "# nx.is_connected(nx.subgraph(graph, list(largest_cc)[:25]))\n",
+    "nx.is_connected(nx.subgraph(graph, largest_cc))"
    ]
   },
   {
