--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -269,7 +269,8 @@
     "    \"\"\"\n",
     "    Returns a sample graph of the given size\n",
     "    \"\"\"\n",
-    "    \n",
+    "    cc_list = sorted(nx.connected_components(graph), key=len, reverse=True)\n",
+    "\n",
     "    \n",
     "    return nx.subgraph(graph, largest_cc[:sample_size])"
    ]
