--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -254,8 +254,8 @@
     }
    ],
    "source": [
-    "# nx.is_connected(nx.subgraph(graph, list(largest_cc)[:25]))\n",
-    "nx.is_connected(nx.subgraph(graph, largest_cc))"
+    "nx.is_connected(nx.subgraph(graph, list(largest_cc)[:25]))\n",
+    "# nx.is_connected(nx.subgraph(graph, largest_cc))"
    ]
   },
   {
@@ -269,7 +269,18 @@
     "    \"\"\"\n",
     "    Returns a sample graph of the given size\n",
     "    \"\"\"\n",
-    "    cc_list = sorted(nx.connected_components(graph), key=len, reverse=True)\n",
+    "    sorted_cc = sorted(nx.connected_components(graph), key=len, reverse=True)\n",
+    "    largest_cc = sorted_cc[0]\n",
+    "\n",
+    "    if sample_size > len(largest_cc):\n",
+    "        print_error(f\"Sample size {sample_size} is greater than the largest connected component size {len(largest_cc)}\")\n",
+    "        \n",
+    "        # make it bigger\n",
+    "        return graph\n",
+    "    else:\n",
+    "        # make it shorter\n",
+    "        \n",
+    "\n",
     "\n",
     "    \n",
     "    return nx.subgraph(graph, largest_cc[:sample_size])"
