--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -185,8 +185,8 @@
     }
    ],
    "source": [
-    "graph = nx.read_edgelist(join(data_dir, \"DM-HT.txt\"), nodetype=str, data=((\"weight\", float),))\n",
-    "# graph = nx.read_edgelist(join(data_dir, \"DM-HT_small.txt\"), nodetype=str, data=((\"weight\", float),))\n",
+    "# graph = nx.read_edgelist(join(data_dir, \"DM-HT.txt\"), nodetype=str, data=((\"weight\", float),))\n",
+    "graph = nx.read_edgelist(join(data_dir, \"DM-HT_small.txt\"), nodetype=str, data=((\"weight\", float),))\n",
     "di_graph = undirected_to_directed(graph)\n",
     "print(f\"{graph}\")"
    ]
@@ -210,7 +210,7 @@
    ],
    "source": [
     "largest_cc = max(nx.connected_components(graph), key=len)\n",
-    "len(largest_cc)"
+    "largest_cc"
    ]
   },
   {
