--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 164,
    "id": "4a197da6",
    "metadata": {},
    "outputs": [
@@ -180,7 +180,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Graph with 2989 nodes and 4660 edges\n"
+      "Graph with 27 nodes and 21 edges\n"
      ]
     }
    ],
@@ -193,17 +193,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 165,
    "id": "d8e72801",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2831"
+       "{'4R79.2', 'F33A8.4', 'K08E4.1', 'Y37E3.9', 'Y59A8B.1'}"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,6 +211,32 @@
    "source": [
     "largest_cc = max(nx.connected_components(graph), key=len)\n",
     "largest_cc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "id": "2272baeb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'4R79.2', 'F33A8.4', 'K08E4.1', 'Y59A8B.1', 'Y37E3.9'}\n",
+      "{'AC3.2', 'C55A6.10'}\n",
+      "{'F55F8.5', 'AC3.8', 'AC3.7', 'C36B7.6', 'R166.2'}\n",
+      "{'AC7.2', 'F59F5.6'}\n",
+      "{'Y74C9A.3', 'K08H2.6', 'B0024.11', 'K01G5.2'}\n",
+      "{'M142.1', 'B0024.13'}\n",
+      "{'T16H12.5', 'D2021.2', 'B0024.14'}\n",
+      "{'B0024.9', 'T27A10.3', 'ZK370.2', 'T27E9.3'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in nx.connected_components(graph):\n",
+    "    print(x)"
    ]
   },
   {
