--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -215,6 +215,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 169,
+   "id": "ff414d0c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AtlasView({'F33A8.4': {'weight': 2.0535098696773}, 'K08E4.1': {'weight': 1.71816616036671}, 'Y37E3.9': {'weight': 2.0535098696773}, 'Y59A8B.1': {'weight': 2.03824718864659}})"
+      ]
+     },
+     "execution_count": 169,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "graph.adj['4R79.2']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 168,
    "id": "2272baeb",
    "metadata": {},
