--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -291,6 +291,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from networkx import is_connected\n",
+    "\n",
+    "\n",
     "def sample_graph(graph: nx.Graph, sample_size: int, verbose: bool) -> nx.Graph:\n",
     "    \"\"\"\n",
     "    Returns a sample graph of the given size\n",
@@ -299,10 +302,16 @@
     "    largest_cc = sorted_cc[0]\n",
     "\n",
     "    if sample_size > len(largest_cc):\n",
-    "        print_error(f\"Sample size {sample_size} is greater than the largest connected component size {len(largest_cc)}\")\n",
+    "        if verbose: print_error(f\"Sample size {sample_size} is greater than the largest connected component size {len(largest_cc)}\")\n",
     "        \n",
-    "        # make it bigger\n",
-    "        return graph\n",
+    "        if nx.is_connected(graph):\n",
+    "            if verbose: print_log(f\"Graph is connected\")\n",
+    "            return graph\n",
+    "        else:\n",
+    "            # make it bigger\n",
+    "            \n",
+    "\n",
+    "            return graph\n",
     "    else:\n",
     "        # make it shorter\n",
     "\n",
