--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -293,11 +293,24 @@
    "source": [
     "from networkx import is_connected\n",
     "\n",
+    "def make_graph_bigger(graph: nx.Graph, sample_size: int, verbose: bool) -> nx.Graph:\n",
+    "    \"\"\"\n",
+    "    Makes the graph bigger by adding more nodes\n",
+    "    \"\"\"\n",
+    "    if verbose:\n",
+    "        print_log(f\"Making the graph bigger by adding {sample_size} nodes\")\n",
+    "    new_graph = graph.copy()\n",
+    "    for i in range(sample_size):\n",
+    "        new_graph.add_node(f\"new_node_{i}\")\n",
+    "    return new_graph\n",
     "\n",
     "def sample_graph(graph: nx.Graph, sample_size: int, verbose: bool) -> nx.Graph:\n",
     "    \"\"\"\n",
     "    Returns a sample graph of the given size\n",
     "    \"\"\"\n",
+    "\n",
+    "\n",
+    "\n",
     "    sorted_cc = sorted(nx.connected_components(graph), key=len, reverse=True)\n",
     "    largest_cc = sorted_cc[0]\n",
     "\n",
@@ -309,7 +322,7 @@
     "            return graph\n",
     "        else:\n",
     "            # make it bigger\n",
-    "            \n",
+    "\n",
     "\n",
     "            return graph\n",
     "    else:\n",
