--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -293,7 +293,7 @@
    "source": [
     "from networkx import is_connected\n",
     "\n",
-    "def make_graph_bigger(graph: nx.Graph, sample_size: int, verbose: bool) -> nx.Graph:\n",
+    "def make_graph_bigger(graph: nx.Graph, sample_size: int, sorted_cc: list, verbose: bool) -> nx.Graph:\n",
     "    \"\"\"\n",
     "    Makes the graph bigger by adding more nodes\n",
     "    \"\"\"\n",
