--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -297,6 +297,10 @@
     "    \"\"\"\n",
     "    Makes the graph bigger by adding more nodes\n",
     "    \"\"\"\n",
+    "    largest_cc = sorted_cc[0]\n",
+    "\n",
+    "    \n",
+    "\n",
     "    if verbose:\n",
     "        print_log(f\"Making the graph bigger by adding {sample_size} nodes\")\n",
     "    new_graph = graph.copy()\n",
