--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -353,7 +353,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 178,
+   "id": "58504728",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'set' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [178], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28msorted\u001b[39m(nx\u001b[38;5;241m.\u001b[39mconnected_components(graph), key\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mlen\u001b[39m, reverse\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)[\u001b[38;5;241m1\u001b[39m](\u001b[38;5;241m0\u001b[39m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'set' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "sorted(nx.connected_components(graph), key=len, reverse=True)[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
    "id": "da66b384",
    "metadata": {},
    "outputs": [
@@ -363,7 +385,7 @@
        "{'4R79.2', 'F33A8.4', 'K08E4.1', 'Y37E3.9', 'Y59A8B.1'}"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 173,
      "metadata": {},
      "output_type": "execute_result"
     }
