--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -299,7 +299,10 @@
     "    \"\"\"\n",
     "    largest_cc = sorted_cc[0]\n",
     "\n",
-    "    \n",
+    "    __graph = nx.subgraph(graph, largest_cc)\n",
+    "\n",
+    "    for cc in sorted_cc[1:]:\n",
+    "\n",
     "\n",
     "\n",
     "    if verbose:\n",
