--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -300,6 +300,7 @@
     "    largest_cc = sorted_cc[0]\n",
     "\n",
     "    __graph = nx.subgraph(graph, largest_cc)\n",
+    "    __first_node = list(largest_cc)[0]\n",
     "\n",
     "    for cc in sorted_cc[1:]:\n",
     "\n",
