Work in progress

--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -299,6 +299,8 @@
     "    \"\"\"\n",
     "    largest_cc = sorted_cc[0]\n",
     "\n",
+    "    __total = len(largest_cc)\n",
+    "\n",
     "    __graph = nx.subgraph(graph, largest_cc)\n",
     "    __first_node = list(largest_cc)[0]\n",
     "\n",
@@ -357,24 +359,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 187,
    "id": "58504728",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'F55F8.5'"
+       "'4R79.2'"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 187,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# sorted(nx.connected_components(graph), key=len, reverse=True)[1]\n",
-    "list(sorted(nx.connected_components(graph), key=len, reverse=True)[1])[0]"
+    "list(sorted(nx.connected_components(graph), key=len, reverse=True)[0])[0]"
    ]
   },
   {
