--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -305,7 +305,8 @@
     "    __graph = nx.subgraph(graph, largest_cc)\n",
     "\n",
     "    for cc in sorted_cc[1:]:\n",
-    "        \n",
+    "        # return if adding another connected component will make the graph bigger than sample size\n",
+    "        if len(__graph) + len(cc) > sample_size:\n",
     "\n",
     "\n",
     "\n",
