--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -306,7 +306,14 @@
     "\n",
     "    for cc in sorted_cc[1:]:\n",
     "        # return if adding another connected component will make the graph bigger than sample size\n",
-    "        if len(__graph) + len(cc) > sample_size:\n",
+    "        if (len(__graph) + len(cc)) > sample_size: break\n",
+    "\n",
+    "        # add new edge to make the graph connected\n",
+    "        __graph.add_edge(__first_node, list(cc)[0])\n",
+    "\n",
+    "\n",
+    "\n",
+    "    return __graph\n",
     "\n",
     "\n",
     "\n",
@@ -379,6 +386,27 @@
    "source": [
     "# sorted(nx.connected_components(graph), key=len, reverse=True)[1]\n",
     "list(sorted(nx.connected_components(graph), key=len, reverse=True)[0])[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "id": "ce0cb1a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Graph with 27 nodes and 21 edges'"
+      ]
+     },
+     "execution_count": 189,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str(graph)"
    ]
   },
   {
